fixed some layout issues

--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -15,8 +15,8 @@
 
 body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  width:100%;
+  height:100%;
   overflow: auto;
 }
 
